--- a/doc/misc-docs/styles.css
+++ b/doc/misc-docs/styles.css
@@ -2,14 +2,14 @@
 /* Custom style-sheet stuffs for the Subversion book in HTML form.      */
 /************************************************************************/
 
-BODY
+body
 {
     background: white;
     margin: 0.5in;
     font-family: arial,helvetica,sans-serif;
 }
 
-H1.title
+h1.title
 {
     font-size: 250%;
     font-style: normal;
@@ -17,14 +17,14 @@ H1.title
     color: black;
 }
 
-H2.subtitle
+h2.subtitle
 {
     font-size: 150%;
     font-style: italic;
     color: black;
 }
 
-H2.title
+h2.title
 {
     font-size: 150%;
     font-style: normal;
@@ -32,7 +32,7 @@ H2.title
     color: black;
 }
 
-H3.title
+h3.title
 {
     font-size: 125%;
     font-style: normal;
@@ -40,7 +40,7 @@ H3.title
     color: black;
 }
 
-H4.title
+h4.title
 {
     font-size: 100%;
     font-style: normal;
@@ -48,7 +48,7 @@ H4.title
     color: black;
 }
 
-.toc B
+.toc b
 {
     font-size: 125%;
     font-style: normal;
@@ -56,14 +56,14 @@ H4.title
     color: black;
 }
 
-P,LI,UL,OL,DD,DT
+p,li,ul,ol,dd,dt
 {
     font-style: normal;
     font-weight: normal;
     color: black;
 }
 
-TT,PRE
+tt,pre
 {
     font-family: courier new,courier,fixed;
 }
@@ -81,26 +81,26 @@ TT,PRE
     font-style: italic;
 }
 
-A
+a
 {
     color: blue;
     text-decoration: underline;
-}	
+}    
 
-A:hover 
+a:hover 
 {
     background: rgb(75%,75%,100%);
     color: blue;
     text-decoration: underline;
 }
 
-A:visited 
+a:visited 
 {
     color: purple;
     text-decoration: underline;
 }
 
-IMG
+img
 {
     border: none;
 }
@@ -110,24 +110,33 @@ IMG
     margin: 0.125in 0.5in;
 }
 
-.table TABLE
+.table table
 {
-    border: 1px rgb(180,180,200) solid;
-    border-spacing: 0px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    border-spacing: 0;
+    background: rgb(240,240,240);
 }
 
-.table TD
+.table td
 {
-    border: 1px rgb(180,180,200) solid;
+    border: none;
+    border-right: 1px black solid;
+    border-bottom: 1px black solid;
+    padding: 2px;
 }
 
-.table TH
+.table th
 {
-    background: rgb(180,180,200);
-    border: 1px rgb(180,180,200) solid;
+    background: rgb(180,180,180);
+    border: none;
+    border-right: 1px black solid;
+    border-bottom: 1px black solid;
+    padding: 2px;
 }
 
-.table P.title, .figure P.title, .example P.title
+.table p.title, .figure p.title, .example p.title
 {
     text-align: left !important;
     font-size: 100% !important;
@@ -143,22 +152,42 @@ IMG
 
 .sidebar 
 {
-    border: 2px black solid;
-    background: rgb(230,230,235);
-    padding: 0.12in;
-    margin: 0 0.5in;
+    border-top: dotted 1px black;
+    border-left: dotted 1px black;
+    border-right: solid 2px black;
+    border-bottom: solid 2px black;
+    background: rgb(240,220,170);
+    padding: 0 0.12in;
+    margin: 0.5in;
 }
 
-.sidebar P.title
+.note .programlisting, .note .screen, 
+.tip .programlisting, .tip .screen, 
+.warning .programlisting, .warning .screen, 
+.sidebar .programlisting, .sidebar .screen
+{
+    border: none;
+    background: none;
+}
+
+.sidebar p.title
 {
     text-align: center;
     font-size: 125%;
 }
 
+.note
+{
+    border: black solid 1px;
+    background: url(./images/note.png) no-repeat rgb(252,246,220);
+    margin: 0.12in 0;
+    padding: 0 55px;
+}
+
 .tip
 {
     border: black solid 1px;
-    background: url(./images/info.png) no-repeat;
+    background: url(./images/info.png) no-repeat rgb(224,244,255);
     margin: 0.12in 0;
     padding: 0 55px;
 }
@@ -166,27 +195,22 @@ IMG
 .warning
 {
     border: black solid 1px;
-    background: url(./images/warning.png) no-repeat;
-    margin: 0.12in 0;
-    padding: 0 55px;
-}
-
-.note
-{
-    border: black solid 1px;
-    background: url(./images/note.png) no-repeat;
+    background: url(./images/warning.png) no-repeat rgb(255,210,210);
     margin: 0.12in 0;
     padding: 0 55px;
 }
 
 .programlisting, .screen
 {
-    font-family: courier new,courier,fixed;
-    font-style: normal;
-    font-weight: normal;
     font-size: 90%;
     color: black;
-    margin: 0 0.5in;
+    margin: 1em 0.5in;
+    padding: 0.5em;
+    background: rgb(240,240,240);
+    border-top: black dotted 1px;
+    border-left: black dotted 1px;
+    border-right: black solid 2px;
+    border-bottom: black solid 2px;
 }
 
 .navheader, .navfooter
@@ -195,7 +219,7 @@ IMG
     background: rgb(180,180,200);
 }
 
-.navheader HR, .navfooter HR
+.navheader hr, .navfooter hr
 {
     display: none;
 }
