Make a canonical templates area for commit access grants:
* notes/commit-access-templates: New directory.

* notes/commit-access-templates/full-committer.tmpl: New file.

* notes/contrib-committer.tmpl: Moved to...
* notes/commit-access-templates/contrib-committer.tmpl: ...here.

* notes/commit-access-templates/partial-committer.tmpl: New file, was
  a section in http://svn.collab.net/repos/svn-committers/trunk/index.html.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857726 13f79535-47bb-0310-9956-ffa450edef68

--- a/notes/commit-access-templates/contrib-committer.tmpl
+++ b/notes/commit-access-templates/contrib-committer.tmpl
@@ -1,7 +1,8 @@
 This is a template for offering people commit access in the contrib/
-area.  Just replace "J. Random" with the offeree, and "XXXXX" with the
-name of their contribution.  Thanks to Garrett Rooney for his original
-mail to Ray Miller regarding p42svn, on which this template is based.
+area.  Just replace "J. Random" with the offeree, "XXXXX" with the
+name of their contribution, and "{AT}" with "@".  Thanks to Garrett
+Rooney for his original mail to Ray Miller regarding p42svn, on which
+this template is based.
 
 --------------------8-<-------cut-here---------8-<-----------------------
 
@@ -38,11 +39,7 @@ If all this is okay with you, please send us a username and password;
 the username should be the same as your subversion.tigris.org
 username, and the password can be plaintext or crypted.  Send to
 
-   Ben Collins-Sussman <sussman@collab.net>
-   C. Michael Pilato <cmpilato@collab.net>
-   Sander Striker <striker@apache.org> 
-   Greg Stein <gstein@collab.net>
-   Karl Fogel <kfogel@collab.net>
+   svnadmin{AT}svn.collab.net
 
 and one of them will set you up with commit access.  If they forget to
 add you to the COMMITTERS file, feel free to do it yourself.  Then
